@@ -21,6 +21,7 @@
 	- fuse_teardown()
 	- fuse_exited()
 	- fuse_lowlevel_is_lib_option()
+	- fuse_operations.getdir()
 
 2013-02-06  Miklos Szeredi <miklos@szeredi.hu>
 
